T-001: Rename app to PrepTalk + branch protection docs
Input: CR-20260130-1727, CR-20260130-1729

Decisions: D-20260130-1729

Spec: docs/specs/20260130-preptalk-name/spec.md; docs/specs/20260130-branch-protection/spec.md

Tasks: docs/specs/20260130-preptalk-name/tasks.md; docs/specs/20260130-branch-protection/tasks.md

Progress: docs/progress.txt

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Awesome Interview Coach</title>
+    <title>PrepTalk Interview Coach</title>
     <link rel="stylesheet" href="/static/css/components.css" />
   </head>
   <body>
